try to fix results visibility

--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 .results{
-    display: none;
+    visibility: hidden;
 }
 
 a, .btn-link {
